second lab tested